--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ analytics:
 
 releases:
   unofficials:
+  - version:   3.5.6
+    revision:  9327
+    date_time: 2013-06-03 07:05:16 -0000
+
   - version:   3.5.5
     revision:  9306
     date_time: 2013-05-27 13:17:42 -0000
