--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ analytics:
 
 releases:
   unofficials:
+  - version:   3.5.7
+    revision:  9352
+    date_time: 2013-06-07 20:38:36 -0000
+
   - version:   3.5.6
     revision:  9327
     date_time: 2013-06-03 07:05:16 -0000
