--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ analytics:
 
 releases:
   unofficials:
+  - version:   3.5.8
+    revision:  9429
+    date_time: 2013-07-01 12:23:10 -0000
+
   - version:   3.5.7
     revision:  9352
     date_time: 2013-06-07 20:38:36 -0000
