Add lazy feature to outputPanel.
git-svn-id: https://primefaces.googlecode.com/svn/primefaces/trunk@9586 5a70e874-a5cb-11dd-8af2-493fb0bb9f7c

--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,7 @@
                                 <include>${project.build.directory}/classes/META-INF/resources/primefaces/messages/messages.css</include>
                                 <include>${project.build.directory}/classes/META-INF/resources/primefaces/notificationbar/notificationbar.css</include>
                                 <include>${project.build.directory}/classes/META-INF/resources/primefaces/orderlist/orderlist.css</include>
+                                <include>${project.build.directory}/classes/META-INF/resources/primefaces/outputpanel/outputpanel.css</include>
                                 <include>${project.build.directory}/classes/META-INF/resources/primefaces/overlaypanel/overlaypanel.css</include>
                                 <include>${project.build.directory}/classes/META-INF/resources/primefaces/panel/panel.css</include>
                                 <include>${project.build.directory}/classes/META-INF/resources/primefaces/panelgrid/panelgrid.css</include>
@@ -318,6 +319,7 @@
                                 <include>${project.build.directory}/classes/META-INF/resources/primefaces/panel/panel.js</include>
                                 <include>${project.build.directory}/classes/META-INF/resources/primefaces/poll/poll.js</include>
                                 <include>${project.build.directory}/classes/META-INF/resources/primefaces/orderlist/orderlist.js</include>
+                                <include>${project.build.directory}/classes/META-INF/resources/primefaces/outputpanel/outputpanel.js</include>
                                 <include>${project.build.directory}/classes/META-INF/resources/primefaces/overlaypanel/overlaypanel.js</include>
                                 <include>${project.build.directory}/classes/META-INF/resources/primefaces/paginator/paginator.js</include>
                                 <include>${project.build.directory}/classes/META-INF/resources/primefaces/picklist/picklist.js</include>
@@ -514,6 +516,7 @@
                                         <include>${project.build.directory}/classes/META-INF/resources/primefaces/messages/messages.css</include>
                                         <include>${project.build.directory}/classes/META-INF/resources/primefaces/notificationbar/notificationbar.css</include>
                                         <include>${project.build.directory}/classes/META-INF/resources/primefaces/orderlist/orderlist.css</include>
+                                        <include>${project.build.directory}/classes/META-INF/resources/primefaces/outputpanel/outputpanel.css</include>
                                         <include>${project.build.directory}/classes/META-INF/resources/primefaces/overlaypanel/overlaypanel.css</include>
                                         <include>${project.build.directory}/classes/META-INF/resources/primefaces/panel/panel.css</include>
                                         <include>${project.build.directory}/classes/META-INF/resources/primefaces/panelgrid/panelgrid.css</include>
@@ -561,6 +564,7 @@
                                         <include>${project.build.directory}/classes/META-INF/resources/primefaces/panel/panel.js</include>
                                         <include>${project.build.directory}/classes/META-INF/resources/primefaces/poll/poll.js</include>
                                         <include>${project.build.directory}/classes/META-INF/resources/primefaces/orderlist/orderlist.js</include>
+                                        <include>${project.build.directory}/classes/META-INF/resources/primefaces/outputpanel/outputpanel.js</include>
                                         <include>${project.build.directory}/classes/META-INF/resources/primefaces/overlaypanel/overlaypanel.js</include>
                                         <include>${project.build.directory}/classes/META-INF/resources/primefaces/paginator/paginator.js</include>
                                         <include>${project.build.directory}/classes/META-INF/resources/primefaces/picklist/picklist.js</include>
