--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ analytics:
 
 releases:
   unofficials:
+  - version:   3.5.12
+    revision:  9861
+    date_time: 2013-08-19 13:21:17 -0000
+
   - version:   3.5.11
     revision:  9742
     date_time: 2013-08-12 19:53:46 -0000
