--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ analytics:
 
 releases:
   unofficials:
+  - version:   3.5.13
+    revision:  9871
+    date_time: 2013-08-20 13:30:02 -0000
+
   - version:   3.5.12
     revision:  9861
     date_time: 2013-08-19 13:21:17 -0000
