--- a/_config.yml
+++ b/_config.yml
@@ -12,55 +12,68 @@ releases:
   unofficials:
   - version:   3.5.13
     revision:  9871
-    date_time: 2013-08-20 13:30:02 -0000
+    date_time: 2013-08-21 13:22:53 -0000
+    suffix:    "UR2"
 
   - version:   3.5.12
     revision:  9861
     date_time: 2013-08-19 13:21:17 -0000
+    suffix:    "UR"
 
   - version:   3.5.11
     revision:  9742
     date_time: 2013-08-12 19:53:46 -0000
+    suffix:    "UR"
 
   - version:   3.5.10
     revision:  9678
     date_time: 2013-07-29 15:39:59 -0000
+    suffix:    "UR"
 
   - version:   3.5.9
     revision:  9636
     date_time: 2013-07-22 12:11:20 -0000
+    suffix:    "UR"
 
   - version:   3.5.8
     revision:  9429
     date_time: 2013-07-01 12:23:10 -0000
+    suffix:    "UR"
 
   - version:   3.5.7
     revision:  9352
     date_time: 2013-06-07 20:38:36 -0000
+    suffix:    "UR"
 
   - version:   3.5.6
     revision:  9327
     date_time: 2013-06-03 07:05:16 -0000
+    suffix:    "UR"
 
   - version:   3.5.5
     revision:  9306
     date_time: 2013-05-27 13:17:42 -0000
+    suffix:    "UR"
 
   - version:   3.5.4
     revision:  9175
     date_time: 2013-05-13 10:07:49 -0000
+    suffix:    "UR"
 
   - version:   3.5.3
     revision:  9003
     date_time: 2013-04-22 14:32:25 -0000
+    suffix:    "UR"
 
   - version:   3.5.2
     revision:  8865
     date_time: 2013-03-31 13:54:19 -0000
+    suffix:    "UR"
 
   - version:   3.5.1
     revision:  8807
     date_time: 2013-03-16 06:59:30 -0000
+    suffix:    "UR"
 
   officials:
   - version: 3.5
