--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,11 @@ analytics:
 
 releases:
   unofficials:
+  - version:   3.5.14
+    revision:  9944
+    date_time: 2013-09-02 20:58:23 -0000
+    suffix:    "UR"
+
   - version:   3.5.13
     revision:  9871
     date_time: 2013-08-21 13:22:53 -0000
