--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,11 @@ analytics:
 
 releases:
   unofficials:
+  - version:   3.5.16
+    revision:  10105
+    date_time: 2013-09-30 11:41:52 -0000
+    suffix:    "UR"
+
   - version:   3.5.15
     revision:  10083
     date_time: 2013-09-25 10:45:33 -0000
