--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,11 @@ analytics:
 
 releases:
   unofficials:
+  - version:   3.5.17
+    revision:  10158
+    date_time: 2013-10-15 21:02:11 -0000
+    suffix:    "UR"
+
   - version:   3.5.16
     revision:  10105
     date_time: 2013-09-30 11:41:52 -0000
