--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,11 @@ analytics:
 
 releases:
   unofficials:
+  - version:   4.0.1
+    revision:  10158
+    date_time: 2013-10-15 22:03:57 -0000
+    suffix:    "UR"
+
   - version:   3.5.17
     revision:  10158
     date_time: 2013-10-15 21:02:11 -0000
