--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.primefaces</groupId>
     <artifactId>primefaces</artifactId>
     <packaging>jar</packaging>
-    <version>3.5.22-SNAPSHOT</version>
+    <version>3.5.22-UR</version>
     <name>primefaces</name>
     <url>http://www.primefaces.org</url>
     
