--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,16 @@ analytics:
 
 releases:
   unofficials:
+  - version:   4.0.6
+    revision:  10498
+    date_time: 2014-01-06 12:11:36 -0000
+    suffix:    "UR"
+
+  - version:   3.5.22
+    revision:  10498
+    date_time: 2014-01-06 11:40:08 -0000
+    suffix:    "UR"
+
   - version:   4.0.5
     revision:  10349
     date_time: 2013-12-16 11:12:09 -0000
